@@ -46,6 +46,7 @@ General data analysis
     :maxdepth: 1
 
     perform_PCoA_analysis
+    perform_nmds
     motif_results
 
 ******************
