@@ -45,6 +45,7 @@ def suite():
         'test_app.test_util',
         'test_cluster.test_metric_scaling',
         'test_cluster.test_UPGMA',
+        'test_cluster.test_nmds',
         'test_core.test_alphabet',
         'test_core.test_alignment',
         'test_core.test_annotation',
