@@ -2,7 +2,8 @@
 Cogent 1.2 - 1.3
 ****************
 
-* list code base changes here
+* added cogent.cluster.nmds, code to perform nonmetric multidimensional
+  scaling.  Not as fast as others (e.g.: R, MASS package, isoMDS)
 
 
 ****************
